[Remoting Mobile] Fix crashes related to mojo URL loader refactoring

We have found a few crashes on Chromoting mobile clients that are
related to a refactoring to replace URLFetcher with ChromiumUrlRequest:

* Apps crash at launch because mojo core is not initialized.
* TransitionalURLLoaderFactoryOwner and the SharedURLLoaderFactory it
  creates seem to be thread unsafe, so the app crashes because of some
  thread checker failures.

These issues are fixed by:

* Calling mojo::core::Init() in the client runtime.
* Make url_loader_factory() only being called on the network thread and
  guard it with DCHECK.

Bug: 878919
Change-Id: I3827b5175546aa9845b53e95cbd913043028b59e
Reviewed-on: https://chromium-review.googlesource.com/1196026
Reviewed-by: Ken Rockot <rockot@chromium.org>
Reviewed-by: Antonio Gomes <tonikitoo@igalia.com>
Reviewed-by: Joe Downing <joedow@chromium.org>
Commit-Queue: Yuwei Huang <yuweih@chromium.org>
Cr-Commit-Position: refs/heads/master@{#587754}
Former-commit-id: 4debbed750aca54fe46c20a8c286c4b04fe483c3